<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_device_information"
            android:title="@string/info"
            android:enabled="false" />
        <item
            android:id="@+id/configure_devices"
            android:icon="@drawable/ic_configure"
            android:title="@string/configure_devices"
            android:enabled="false" />
        <item
            android:id="@+id/all_devices"
            android:icon="@drawable/ic_devices"
            android:title="@string/all_devices"
            android:enabled="false" />

    </group>

    <item android:title="Communicate">
        <menu>

        </menu>
    </item>

</menu>
