<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.youncta.loranodeconfig.ConfigFragment">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        android:paddingTop="20dp">

        <android.support.v7.widget.CardView
            android:id="@+id/card_view_2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="2dp"
            card_view:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="30dp"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_system_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/input_application_key"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_application_key" />
                    </android.support.design.widget.TextInputLayout>

                    <ImageView
                        android:id="@+id/system_name_source_indicator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0"
                        android:src="@drawable/ic_nfc" />

                </LinearLayout>

                <Space
                    android:layout_width="fill_parent"
                    android:layout_height="30dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_device_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <EditText
                            android:id="@+id/input_device_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_device_name"
                            android:text="Actuator"
                            />
                    </android.support.design.widget.TextInputLayout>


                    <ImageView
                        android:id="@+id/device_name_source_indicator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0"
                        android:src="@drawable/ic_nfc" />
                </LinearLayout>

                <Space
                    android:layout_width="fill_parent"
                    android:layout_height="30dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_location_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <EditText
                            android:id="@+id/input_location_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_location_name"
                            android:text="Agrate"

                            />
                    </android.support.design.widget.TextInputLayout>

                    <ImageView
                        android:id="@+id/location_name_source_indicator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0"
                        android:src="@drawable/ic_nfc" />
                </LinearLayout>

                <Space
                    android:layout_width="fill_parent"
                    android:layout_height="30dp" />

                <LinearLayout
                    android:id="@+id/input_layout_gps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/input_layout_gps_lat"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.33">

                            <EditText
                                android:id="@+id/input_gps_lat"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:digits="0123456789."
                                android:hint="@string/hint_gps_latitude"
                                android:inputType="numberDecimal"
                                app:hintTextAppearance="@style/HintTextLabel" />
                        </android.support.design.widget.TextInputLayout>
                        
                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/input_layout_gps_lon"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.33">

                            <EditText
                                android:id="@+id/input_gps_lon"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:digits="0123456789."
                                android:hint="@string/hint_gps_longitude"
                                android:inputType="numberDecimal"
                                app:hintTextAppearance="@style/HintTextLabel" />
                        </android.support.design.widget.TextInputLayout>



                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/input_layout_gps_alt"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.33">

                            <EditText
                                android:id="@+id/input_gps_alt"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:digits="0123456789."
                                android:hint="@string/hint_gps_altitude"
                                android:inputType="numberDecimal"
                                app:hintTextAppearance="@style/HintTextLabel" />
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/gps_source_indicator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0"
                        android:src="@drawable/ic_nfc" />

                </LinearLayout>


                <Space
                    android:layout_width="fill_parent"
                    android:layout_height="20dp" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <Space
            android:layout_width="fill_parent"
            android:layout_height="45dp" />


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:id="@+id/btn_apply"
                android:visibility="invisible"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@color/colorPrimary"
                android:text="@string/btn_apply"
                android:textColor="@android:color/white" />


        </LinearLayout>

        <Space
            android:layout_width="fill_parent"
            android:layout_height="30dp" />

    </LinearLayout>

</FrameLayout>
